Manejando eventos de éxito y fracaso en la autenticación